src/index.scss
@import "reset";
@import "variables";
@import "../node_modules/@glidejs/glide/dist/css/glide.core.min.css";

html {
  font-family: Arial, Helvetica, sans-serif;
  background-color: rgba(0, 0, 0, 0.05);
  color: var(--dark);
}

h1 {
  font-size: 1.5em;
  font-weight: bold;
}

h2 {
  font-size: 1.2em;
  font-weight: bold;
}

dl {
  display: grid;
  grid-template-columns: 1fr 4fr;
  grid-template-areas: "dt dd";
  grid-gap: 0.5em;
  align-items: center;
  dt {
    font-weight: bold;
    grid-area: "dt";
  }
  dd {
    grid-area: "dd";
  }
}

#root {
  display: grid;
  grid-gap: 1em;
}

